<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

    <TextView android:id="@+id/hourly_time"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="5dp"
              android:text="@string/today"
              android:textSize="12sp"
              android:textAlignment="center"
              app:layout_constraintTop_toTopOf="parent"/>

    <TextView android:id="@+id/hourly_temp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginVertical="5dp"
              android:text="@string/temperature"
              android:textSize="16sp"
              android:textStyle="bold"
              android:textColor="@color/text"
              android:textAlignment="center"
              app:layout_constraintTop_toBottomOf="@id/hourly_time"/>

    <ImageView android:id="@+id/hourly_weather_icon"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:padding="15dp"
               android:src="@drawable/ic_clear_day"
               app:layout_constraintTop_toBottomOf="@id/hourly_temp"
               android:contentDescription="@string/icon"/>

    <ImageView android:id="@+id/hourly_wind_direction"
               android:layout_width="15dp"
               android:layout_height="15dp"
               android:src="@drawable/navigation"
               android:rotation="0"
               app:layout_constraintTop_toBottomOf="@id/hourly_weather_icon"
               app:layout_constraintRight_toLeftOf="@id/hourly_wind_speed"
               android:contentDescription="@string/icon"/>

    <TextView android:id="@+id/hourly_wind_speed"
              android:layout_width="30dp"
              android:layout_height="15dp"
              android:text="@string/wind_speed"
              android:textSize="12sp"
              android:textColor="@color/text"
              android:textAlignment="center"
              app:layout_constraintTop_toBottomOf="@id/hourly_weather_icon"
              app:layout_constraintRight_toRightOf="parent"/>

    <TextView android:id="@+id/hourly_aqi"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/rounded_rectangle"
              android:text="@string/aqi_great"
              android:textColor="@color/text"
              android:textSize="12sp"
              android:paddingVertical="2dp"
              android:paddingHorizontal="15dp"
              android:layout_marginTop="5dp"
              app:layout_constraintTop_toBottomOf="@id/hourly_wind_direction"
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
              tools:ignore="SmallSp"/>

</androidx.constraintlayout.widget.ConstraintLayout>