<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginVertical="10dp">

    <ImageView android:id="@+id/daily_daycon"
               android:layout_width="24dp"
               android:layout_height="24dp"
               android:src="@drawable/ic_clear_day"
               android:contentDescription="@string/icon"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView android:id="@+id/daily_day_text"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/day_text"
              android:textColor="@android:color/black"
              android:textSize="16sp"
              android:layout_marginStart="10dp"
              app:layout_constraintLeft_toRightOf="@id/daily_daycon"
              app:layout_constraintTop_toTopOf="@id/daily_daycon"
              app:layout_constraintBottom_toBottomOf="@id/daily_daycon"/>

    <TextView android:id="@+id/daily_aqi"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/rounded_rectangle"
              android:text="@string/aqi_great"
              android:textColor="@android:color/black"
              android:textSize="12sp"
              android:paddingVertical="2dp"
              android:paddingHorizontal="15dp"
              android:layout_marginStart="10dp"
              app:layout_constraintLeft_toRightOf="@id/daily_day_text"
              app:layout_constraintTop_toTopOf="@id/daily_daycon"
              app:layout_constraintBottom_toBottomOf="@id/daily_daycon"/>


    <TextView android:id="@+id/daily_realtime_temp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/dayTemp"
              android:textColor="@android:color/black"
              android:textSize="16sp"
              app:layout_constraintRight_toRightOf="parent"
              app:layout_constraintTop_toTopOf="@id/daily_daycon"
              app:layout_constraintBottom_toBottomOf="@id/daily_daycon"/>

</androidx.constraintlayout.widget.ConstraintLayout>