<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp">

        <TextView android:id="@+id/more_wind_speed"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/wind_speed"
                  style="@style/MainText"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView android:id="@+id/more_humidity"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/temperature"
                  style="@style/MainText"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toRightOf="@id/more_wind_speed"/>

        <TextView android:id="@+id/more_apparent_temperature"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/temperature"
                  style="@style/MainText"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toRightOf="@id/more_humidity"/>

        <TextView android:id="@+id/more_pressure"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/temperature"
                  style="@style/MainText"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintLeft_toRightOf="@id/more_apparent_temperature"/>

        <TextView android:id="@+id/line"
                  android:layout_width="match_parent"
                  android:layout_height="5dp"
                  app:layout_constraintTop_toBottomOf="@id/more_wind_speed"/>


        <TextView android:id="@+id/more_wind_direction"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/wind_north"
                  android:textSize="12sp"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toBottomOf="@id/line"
                  app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/humidity"
                  android:textSize="12sp"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toBottomOf="@id/line"
                  app:layout_constraintLeft_toLeftOf="@id/more_humidity"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/apparent_temperature"
                  android:textSize="12sp"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toBottomOf="@id/line"
                  app:layout_constraintLeft_toLeftOf="@id/more_apparent_temperature"/>

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/pressure"
                  android:textSize="12sp"
                  app:layout_constraintWidth_percent="0.25"
                  app:layout_constraintTop_toBottomOf="@id/line"
                  app:layout_constraintLeft_toLeftOf="@id/more_pressure"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>