<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

        <ImageView style="@style/LifeIcon"
                   android:id="@+id/coldrisk_icon"
                   android:src="@drawable/ic_coldrisk"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="@id/line"
                   android:contentDescription="@string/icon"/>

        <ImageView style="@style/LifeIcon"
                   android:src="@drawable/ic_dressing"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="@id/line"
                   app:layout_constraintRight_toRightOf="parent"
                   android:contentDescription="@string/icon"/>

        <TextView style="@style/LifeText"
                  android:id="@+id/coldrisk"
                  android:text="@string/coldrisk"
                  app:layout_constraintTop_toBottomOf="@id/coldrisk_icon"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="@id/line"/>

        <TextView style="@style/LifeText"
                  android:id="@+id/dressing"
                  android:text="@string/dressing"
                  app:layout_constraintTop_toBottomOf="@id/coldrisk_icon"
                  app:layout_constraintLeft_toLeftOf="@id/line"
                  app:layout_constraintRight_toRightOf="parent"/>

        <TextView style="@style/LifeTopic"
                  android:id="@+id/topic"
                  android:text="@string/coldrisk"
                  app:layout_constraintTop_toBottomOf="@id/coldrisk"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="@id/line"/>

        <TextView style="@style/LifeTopic"
                  android:text="@string/dressing"
                  app:layout_constraintTop_toBottomOf="@id/coldrisk"
                  app:layout_constraintLeft_toLeftOf="@id/line"
                  app:layout_constraintRight_toRightOf="parent"/>

        <TextView android:id="@+id/stuffing"
                  android:layout_width="match_parent"
                  android:layout_height="20dp"
                  app:layout_constraintTop_toBottomOf="@id/topic"/>

        <ImageView style="@style/LifeIcon"
                   android:id="@+id/ultraviolet_icon"
                   android:src="@drawable/ic_ultraviolet"
                   app:layout_constraintTop_toBottomOf="@id/stuffing"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="@id/line"
                   android:contentDescription="@string/icon"/>

        <ImageView style="@style/LifeIcon"
                   android:src="@drawable/ic_carwashing"
                   app:layout_constraintTop_toBottomOf="@id/stuffing"
                   app:layout_constraintLeft_toLeftOf="@id/line"
                   app:layout_constraintRight_toRightOf="parent"
                   android:contentDescription="@string/icon"/>

        <TextView style="@style/LifeText"
                  android:id="@+id/ultraviolet"
                  android:text="@string/ultraviolet"
                  app:layout_constraintTop_toBottomOf="@id/ultraviolet_icon"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="@id/line"/>

        <TextView style="@style/LifeText"
                  android:id="@+id/carwashing"
                  android:text="@string/carwashing"
                  app:layout_constraintTop_toBottomOf="@id/ultraviolet_icon"
                  app:layout_constraintLeft_toLeftOf="@id/line"
                  app:layout_constraintRight_toRightOf="parent"/>

        <TextView style="@style/LifeTopic"
                  android:text="@string/ultraviolet"
                  app:layout_constraintTop_toBottomOf="@id/ultraviolet"
                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintRight_toRightOf="@id/line"/>

        <TextView style="@style/LifeTopic"
                  android:text="@string/carwashing"
                  app:layout_constraintTop_toBottomOf="@id/ultraviolet"
                  app:layout_constraintLeft_toLeftOf="@id/line"
                  app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>